# imitation_learning

./: CMakeLists.txt  README.md  package.xml
action/: Learn.action
imitation_learning/: CMakeLists.txt  package.xml
imitation_learning/src/: imitation_learning_node.py
imitation_learning/test/: record_for_x_seconds.py  test_imitation_learning.py
imitation_learning_msgs/: CMakeLists.txt  README.md  package.xml
imitation_learning_msgs/action/: Learn.action
